Fix clipped logo in safari

--- a/components/logo/index.css
+++ b/components/logo/index.css
@@ -54,7 +54,7 @@
   display: inline-block;
   margin-right: 0;
   margin-bottom: 0.46em;
-  width: 4.8em;
+  width: 4.9em;
   height: 4.8em;
 }
 
